--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,8 +1,13 @@
+// base
+@import 'base/base';
+@import 'base/fontStyle';
+
 // utils
 @import 'utils/utils.scss';
 
+// layout
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
 
-
+// pages
 @import 'pages/index.scss';
