add main content

--- a/assets/scss/utils/utils.scss
+++ b/assets/scss/utils/utils.scss
@@ -11,6 +11,14 @@
 .pb-12{
     padding-bottom: 12px;
 }
+.px-32{
+    padding-left: 32px;
+    padding-right: 32px;
+}
+.py-32{
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 
 // Margin
 
