--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -26,3 +26,18 @@
 .main{
   margin-left: 296px;
 }
+.page-item{
+  width: 32px;
+  height: 32px;
+  a{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    padding-top: 2px;
+    text-align: center;
+    &:hover{
+      background: #198754;
+      color: white;
+    }
+  }
+}
